--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "social-linkedin",
   "version": "0.0.1",
-  "description": "",
+  "description": "linkedin",
   "main": "package.json",
   "dependencies": {
     "socket.io": "^1.3.5",
@@ -12,9 +12,16 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "node app.js",
     "start": "node server.js"
   },
   "author": "Hiperborea",
-  "license": "GPLv3"
+  "license": "GPLv3",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/crhystamils/hb-linkedin.git"
+  },
+  "bugs": {
+    "url": "https://github.com/crhystamils/hb-linkedin/issues"
+  },
+  "homepage": "https://github.com/crhystamils/hb-linkedin"
 }
