--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "social-linkedin",
   "version": "0.0.1",
   "description": "linkedin",
-  "main": "package.json",
+  "main": "server.js",
   "dependencies": {
     "socket.io": "^1.3.5",
     "viewjson": "^0.0.4",
@@ -12,7 +12,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node server"
+    "start": "node server.js"
   },
   "author": "Hiperborea",
   "license": "GPLv3",
